refactor(powerline): 移除电力线路插件中的路径同步和定位功能
- 删除了 PowerLineSourceSync 和 SourceSyncStatus 相关代码
- 移除了 locateLine 方法及相关的定位功能实现
- 简化了 adopt 流程中的状态检查逻辑
- 更新了中文和英文语言文件中的相关提示文本
- 重构了部分验证报告的状态判断逻辑
- 移除了未使用的导入和常量定义